--- a/src/style.scss
+++ b/src/style.scss
@@ -1,10 +1,10 @@
-@import 'scss/_global';
-@import 'scss/_page';
-@import 'scss/_container';
-@import 'scss/_color';
-@import 'scss/_nav';
-@import 'scss/_aside';
-@import 'scss/_columns';
-@import 'scss/_list';
-@import 'scss/_article';
-@import 'scss/_content';
+@use 'scss/_global';
+@use 'scss/_page';
+@use 'scss/_container';
+@use 'scss/_color';
+@use 'scss/_nav';
+@use 'scss/_aside';
+@use 'scss/_columns';
+@use 'scss/_list';
+@use 'scss/_article';
+@use 'scss/_content';
