--- a/src/components/alg/alg-conspect/misis/pages/elem-m1.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m1.html
@@ -3,6 +3,7 @@
   <strong>NlogN Beginners 5-7 Вечерняя группа</strong>
   <p><a href="https://csacademy.com" target="_blank">https://csacademy.com</a></p>
   <p><a href="https://contest.misis.ru/" target="_blank">https://contest.misis.ru/</a></p>
+  <p>2021-01-16 Занятие 1.mp4 9м</p>
 </article>
 
 
