--- a/src/components/alg/alg-conspect/misis/pages/elem-m2.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m2.html
@@ -3,6 +3,8 @@
   <strong>NlogN Beginners 5-7 Вечерняя группа</strong>
   <p><a href="https://csacademy.com" target="_blank">https://csacademy.com</a></p>
   <p><a href="https://contest.misis.ru/" target="_blank">https://contest.misis.ru/</a></p>
+  <p>2021-01-23 Занятие 2 Лекция Условный оператор.mp4 53м</p>
+  <p>2021-01-23 Занятие 2 Разбор.mp4 47м</p>
 </article>
 
 
