--- a/src/components/alg/alg-conspect/misis/pages/elem-m4.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m4.html
@@ -3,6 +3,8 @@
   <strong>NlogN Beginners 5-7 Вечерняя группа</strong>
   <p><a href="https://csacademy.com" target="_blank">https://csacademy.com</a></p>
   <p><a href="https://contest.misis.ru/" target="_blank">https://contest.misis.ru/</a></p>
+  <p>2021-02-06 Занятие 4 Лекция Циклы.mp4 44м</p>
+  <p>2021-02-06 Занятие 4 Разбор.mp4 50м</p>
 </article>
 
 
