--- a/src/components/alg/alg-conspect/misis/pages/elem-m3.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m3.html
@@ -3,6 +3,8 @@
   <strong>NlogN Beginners 5-7 Вечерняя группа</strong>
   <p><a href="https://csacademy.com" target="_blank">https://csacademy.com</a></p>
   <p><a href="https://contest.misis.ru/" target="_blank">https://contest.misis.ru/</a></p>
+  <p>2021-01-30 Занятие 3 Лекция Целочисленная арифметика. Операция деления 35м</p>
+  <p>2021-01-30 Занятие 3 Разбор.mp4 54м</p>
 </article>
 
 
