--- a/src/components/alg/alg-conspect/misis/pages/elem-m6.html
+++ b/src/components/alg/alg-conspect/misis/pages/elem-m6.html
@@ -3,6 +3,8 @@
   <strong>NlogN Beginners 5-7 Вечерняя группа</strong>
   <p><a href="https://csacademy.com" target="_blank">https://csacademy.com</a></p>
   <p><a href="https://contest.misis.ru/" target="_blank">https://contest.misis.ru/</a></p>
+  <p>2021-02-20 Занятие 6 Лекция Циклы 2.mp4 42м</p>
+  <p>2021-02-20 Занятие 6 Разбор.mp4 50м</p>
 </article>
 
 
@@ -10,13 +12,613 @@
 <article class="article">
   <h3>Содержание</h3>
 
-  <br><a href="#p6">Занятие 6. Циклы 3</a>
+      <a href="#p6">Занятие 6. Циклы 2</a>
+  <br><a href="#t6.1">Задача A. Нечетные числа</a>
+  <br><a href="#t6.2">Задача B. Четные числа</a>
+  <br><a href="#t6.3">Задача C. Шагаем широким шагом</a>
+  <br><a href="#t6.4">Задача D. Наименьший делитель</a>
+  <br><a href="#t6.5">Задача E. Не делители</a>
+  <br><a href="#t6.6">Задача F. Количество делителей</a>
+  <br>Задачи со звездочкой
+  <br><a href="#t6.7">Задача A. Список степеней двойки</a>
+  <br><a href="#t6.8">Задача B. Четные</a>
+  <br><a href="#t6.9">Задача C. Длинные бусы</a>
+  <br><a href="#t6.10">Задача D. Сапоги скороходы</a>
+  <br><a href="#t6.11">Задача E. Остатки</a>
 </article>
 
 
 <!-- Занятие 6. Циклы -->
 <article class="article">
   <div class="anchor" id="p6"></div>
-  <h3>Занятие 6. Циклы (2021-02-13)</h3>
+  <h3>Занятие 6. Циклы 2 (2021-02-13)</h3>
 
+  <p>Задача. Вывести все числа от 1 до n.</p>
+  <p>Цикл for</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = 1; i &lt;= n; i++) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+
+  <p>Цикл while</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+  int i = 1;
+
+  while (i &lt;= n) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+    i++;
+  }
+}
+</pre>
+</article>
+
+
+<!-- Задача A. Нечетные числа -->
+<article class="article">
+  <div class="anchor" id="t6.1"></div>
+  <h3>Задача A. Нечетные числа</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/A" target="_blank">https://contest.misis.ru/contest/1155/problems/A</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Выведите все нечетные числа от 1 до N.</p>
+
+  <h4>Входные данные</h4>
+  <p>Дано целое положительное число N.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Нечетные числа от 1 до N.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5</code>
+    <code>1 3 5</code>
+
+    <h4>Пример 2</h4>
+    <code>10</code>
+    <code>1 3 5 7 9</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = 1; i &lt;= n; i += 2) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача B. Четные числа -->
+<article class="article">
+  <div class="anchor" id="t6.2"></div>
+  <h3>Задача B. Четные числа</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/B" target="_blank">https://contest.misis.ru/contest/1155/problems/B</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Дано число N. Вывести все четные числа от 1 до N.</p>
+
+  <h4>Входные данные</h4>
+  <p>Целое положительное число N.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Вывести все четные числа от 1 до N.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5</code>
+    <code>2 4</code>
+
+    <h4>Пример 2</h4>
+    <code>10</code>
+    <code>2 4 6 8 10</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = 2; i &lt;= n; i += 2) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача C. Шагаем широким шагом -->
+<article class="article">
+  <div class="anchor" id="t6.3"></div>
+  <h3>Задача C. Шагаем широким шагом</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/C" target="_blank">https://contest.misis.ru/contest/1155/problems/C</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Даны числа N и K. Выведите все числа от 0 до N, которые делятся на K, не используя if. Помните, что 0 делится на любое число.</p>
+
+  <h4>Входные данные</h4>
+  <p>Даны 2 целых положительных числа N и K.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите все числа от 0 до N которые делятся на K.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>10 3</code>
+    <code>0 3 6 9</code>
+
+    <h4>Пример 2</h4>
+    <code>12 2</code>
+    <code>0 2 4 6 8 10 12</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n, k;
+  cin >> n >> k;
+
+  for (int i = 0; i &lt;= n; i += k) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача D. Наименьший делитель -->
+<article class="article">
+  <div class="anchor" id="t6.4"></div>
+  <h3>Задача D. Наименьший делитель</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/D" target="_blank">https://contest.misis.ru/contest/1155/problems/D</a></p>
+
+  <p>Время 1с. Память 64мб.</p>
+
+  <p>Мальчик Петя собрался на День Рождения к своей подруге Ане. У Пети есть число n, а так же Кодекс Чести его Страны, руководствоваться которым должен каждый мальчик Страны, когда хочет сделать подарок своей подруге. Кодекс Чести говорит о том, что если у мальчика есть число n тогда он должен подарить своей подруге его минимальный делитель. Однако, Кодекс Чести также говорит о том, что лучше не дарить ничего, чем подарить число 1 или число n. Помогите Пете узнать, какое число он должен подарить Ане, чтобы он успел сделать для него красивую упаковку.</p>
+
+  <h4>Входные данные</h4>
+  <p>На вход подается число N (1 ≤ n ≤ 1000).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите наименьший делитель числа n, который не равен 1 и не равен n. Если такого делителя нет, выведите -1.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>6</code>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+    <code>357</code>
+    <code>3</code>
+
+    <h4>Пример 3</h4>
+    <code>2</code>
+    <code>-1</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  int res = -1;
+  for (int i = 2; i &lt; n; i++) {
+    if (n % i == 0) {
+      res = i;
+      break;
+    }
+  }
+
+  cout &lt;&lt; res;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача E. Не делители -->
+<article class="article">
+  <div class="anchor" id="t6.5"></div>
+  <h3>Задача E. Не делители</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/E" target="_blank">https://contest.misis.ru/contest/1155/problems/E</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>"Я пригласил вас, господа, с тем, чтобы сообщить вам пренепреятное известие: к нам едет число N".</p>
+
+  <p>До последнего времени жизнь в уездном городе K протекала спокойно. Однако скорое прибытие числа N заставило жителей города подумать о будущем. Чтобы их город не стал называться уездным городом KN жителям необходимо выполнить заданиче числа N. После того, как число N прибудет жителям потребуется вывести все числа от 1 до N, кроме тех, при делении N на которые получаются целые числа. Помогите жителям уездного города K сохранить название своего города!</p>
+
+  <h4>Входные данные</h4>
+  <p>Вводится натуральное число N: 1 ≤ N ≤ 1000.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите все числа от 1 до N, пропуская те, на которые N делится без остатка. Используйте оператор continue.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>3</code>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+    <code>4</code>
+    <code>3</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = 1; i &lt;= n; i++) {
+    if (n % i == 0) {
+      continue;
+    }
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача F. Количество делителей -->
+<article class="article">
+  <div class="anchor" id="t6.6"></div>
+  <h3>Задача F. Количество делителей</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/F" target="_blank">https://contest.misis.ru/contest/1155/problems/F</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Подсчитайте количество натуральных делителей числа x включая 1 и само число.</p>
+
+  <h4>Входные данные</h4>
+  <p>Вводится натуральное число x: (1 ≤ x ≤ 2*10⁵).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите единственное число - количество делителей числа x.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>1</code>
+    <code>1</code>
+
+    <h4>Пример 2</h4>
+    <code>6</code>
+    <code>4</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int x;
+  cin >> x;
+
+  int cnt = 0;
+  for (int i = 1; i &lt;= x; i++) {
+    if (n % i == 0) {
+      cnt++;
+    }
+  }
+
+  cout &lt;&lt; cnt;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача A. Список степеней двойки -->
+<article class="article">
+  <div class="anchor" id="t6.7"></div>
+  <h3>Задача A. Список степеней двойки</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/A" target="_blank">https://contest.misis.ru/contest/1155/problems/A</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>По данному числу N распечатайте все целые степени двойки, не превосходящие N, в порядке возрастания.</p>
+
+  <h4>Входные данные</h4>
+  <p>Вводится натуральное число.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>50</code>
+    <code>1 2 4 8 16 32</code>
+
+    <h4>Пример 2</h4>
+    <code>1</code>
+    <code>1</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  int step = 1;
+  while (step &lt;= n) {
+    cout &lt;&lt; step &lt;&lt; ' ';
+    step *= 2;
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача B. Четные -->
+<article class="article">
+  <div class="anchor" id="t6.8"></div>
+  <h3>Задача B. Четные</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/B" target="_blank">https://contest.misis.ru/contest/1155/problems/B</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Вывести все четные числа от n до 1. Нельзя использовать if.</p>
+
+  <h4>Входные данные</h4>
+  <p>Вводится натуральное число (1 ≤ n ≤ 1000).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите ответ на задачу.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2</code>
+    <code>2</code>
+
+    <h4>Пример 2</h4>
+    <code>8</code>
+    <code>8 6 4 2</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = n - n % 2; i >= 1; i -= 2) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача C. Длинные бусы -->
+<article class="article">
+  <div class="anchor" id="t6.9"></div>
+  <h3>Задача C. Длинные бусы</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/C" target="_blank">https://contest.misis.ru/contest/1155/problems/C</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Девочка Катя решила купить бусы в подарок своей подруге Свете. У Кати есть n рублей. Оказалось, что в магазине за a рублей можно купить бусы из a² бусин. Помогите Кате сделать выбор! Определите все возможные варианты бус, которые она может себе позволить.</p>
+
+  <h4>Входные данные</h4>
+  <p>Дано целое число n (1 ≤ n ≤ 1000).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите через пробел все возможные длины бус, которые Катя может купить для Светы.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>5</code>
+    <code>1 4 9 16 25</code>
+
+    <h4>Пример 2</h4>
+    <code>8</code>
+    <code>1 4 9 16 25 36 49 64</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int n;
+  cin >> n;
+
+  for (int i = 1; i &lt;= n; i++) {
+    cout &lt;&lt; i * i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача D. Сапоги скороходы -->
+<article class="article">
+  <div class="anchor" id="t6.10"></div>
+  <h3>Задача D. Сапоги скороходы</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/D" target="_blank">https://contest.misis.ru/contest/1155/problems/D</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Девочке Алене ее двоюродная бабушка-ведьма подарила сапоги скороходы. Сапоги устроены следующим образом: перед тем, как надеть их, надо загадать число a и прыгнуть на один метр в ту сторону, куда собираешься отправиться. После этого каждый i-ый шаг получается длиной a<sup>i</sup> метров. Алена загадала число a и отправилась гулять. Определите, на каком расстоянии от дома она окажется через n шагов.</p>
+
+  <h4>Входные данные</h4>
+  <p>Даны два числа a и n (1 ≤ a ≤ 5, 1 ≤ n ≤ 12).</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите одно число: расстояние на которое Алена ушла от дома.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 5</code>
+    <code>63</code>
+
+    <h4>Пример 2</h4>
+    <code>8</code>
+    <code>1 4 9 16 25 36 49 64</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a, n;
+  cin >> a >> n;
+
+  int cnt = 1;
+  int step = a;
+  for (int i = 0; i &lt; n; i++) {
+    cnt += step;
+    step *= a;
+  }
+
+  cout &lt;&lt; cnt;
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- Задача E. Остатки -->
+<article class="article">
+  <div class="anchor" id="t6.11"></div>
+  <h3>Задача E. Остатки</h3>
+
+  <p><a href="https://contest.misis.ru/contest/1155/problems/E" target="_blank">https://contest.misis.ru/contest/1155/problems/E</a></p>
+
+  <p>Время 1с. Память 256мб.</p>
+
+  <p>Даны целые неотрицательные числа a, b, c, d, при этом 0 ≤ c &lt; d. Выведите в порядке возрастания все числа от a до b, которые дают остаток c при делении на d.</p>
+
+  <h4>Входные данные</h4>
+  <p>Вводятся четыре целых числа a, b, c, d.</p>
+
+  <h4>Выходные данные</h4>
+  <p>Выведите ответ на задачу. Если таких чисел в указанном интервале нет, то ничего выводить не нужно.</p>
+  <p>В этой задаче нельзя использовать if и операторы сравнения. Должен быть только один цикл.</p>
+
+  <details>
+    <summary>Примеры</summary>
+    <h4>Пример 1</h4>
+    <code>2 5 0 2</code>
+    <code>2 4</code>
+  </details>
+
+  <details>
+    <summary>Решение</summary>
+    <p>В цикле первое число это ближайшее к a, которое делится на d с остатком c.</p>
+<pre>
+#include &lt;iostream&gt;
+
+using namespace std;
+
+int main() {
+  int a, b, c, d;
+  cin >> a >> b >> c >> d;
+
+  int start = (a - c + d - 1) / d * d + c;
+  for (int i = start; i &lt;= b; i += d) {
+    cout &lt;&lt; i &lt;&lt; ' ';
+  }
+}
+</pre>
+  </details>
 </article>
